--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "vue": "^3.5.13"
+    "vue": "^3.5.13",
+    "vue-chartjs": "^5.3.2"
   },
   "devDependencies": {
     "@playwright/test": "^1.49.1",
